--- a/project/templates/expenses/category_home.html
+++ b/project/templates/expenses/category_home.html
@@ -9,6 +9,9 @@
 	<body>
 		<div class="container my-4">
 			<h1 class="h4 mb-3">Categories</h1>
+			{% if username %}
+			<h2 class="h5 mb-3">Welcome {{ username }}</h2>
+			{% endif %}
 			<div class="table-responsive">
 				<table class="table table-bordered table-hover">
 					<thead class="table-light">
