--- a/project/templates/expenses/user_login.html
+++ b/project/templates/expenses/user_login.html
@@ -5,6 +5,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>User Login Page</title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+		<style>
+			.forgot-password-link:hover {
+				color: red !important;
+			}
+		</style>
 	</head>
 	<body>
 		<div class="container my-4">
@@ -13,7 +18,10 @@
 				<form method="post">
 					{% csrf_token %}
 					{{ form.as_p }}
-					<button type="submit" class="btn btn-primary">Login</button>
+					<div class="d-flex gap-3 align-items-center">
+						<button type="submit" class="btn btn-primary">Login</button>
+						<a href="{% url 'forgot-password' %}" class="text-decoration-none forgot-password-link">Forgot Password?</a>
+					</div>
 				</form>
 			</div>
 		</div>
