--- a/project/templates/expenses/forgot_password.html
+++ b/project/templates/expenses/forgot_password.html
@@ -3,12 +3,12 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>User Login Page</title>
+		<title>Forgot Password</title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 	</head>
 	<body>
 		<div class="container my-4">
-			<h1 class="h4 mb-3">User Login</h1>
+			<h1 class="h4 mb-4">Forgot Password</h1>
 			
 			<!-- Display Messages -->
 			{% if messages %}
@@ -24,16 +24,16 @@
 				<div class="col-md-6">
 					<form method="post">
 						{% csrf_token %}
-						{{ form.as_p }}
-						<div class="d-flex align-items-center">
-							<button type="submit" class="btn btn-primary">Login</button>
-							<a href="{% url 'forgot-password' %}" class="text-decoration-none">Forgot Password?</a>
+						<div class="mb-3">
+							<label for="email" class="form-label">Enter your Email ID</label>
+							<input type="email" class="form-control" id="email" name="email" required>
 						</div>
+						<button type="submit" class="btn btn-primary">Send OTP on Email</button>
+						
 					</form>
-					
-				
 				</div>
 			</div>
+		</div>
 
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 	</body>
