--- a/project/templates/expenses/verify_otp.html
+++ b/project/templates/expenses/verify_otp.html
@@ -3,12 +3,12 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>User Login Page</title>
+		<title>Verify OTP</title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 	</head>
 	<body>
 		<div class="container my-4">
-			<h1 class="h4 mb-3">User Login</h1>
+			<h1 class="h4 mb-4">Verify OTP</h1>
 			
 			<!-- Display Messages -->
 			{% if messages %}
@@ -17,6 +17,10 @@
 						{{ message }}
 						<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 					</div>
+					<script>
+						// Show as popup alert
+						alert("{{ message }}");
+					</script>
 				{% endfor %}
 			{% endif %}
 			
@@ -24,16 +28,18 @@
 				<div class="col-md-6">
 					<form method="post">
 						{% csrf_token %}
-						{{ form.as_p }}
-						<div class="d-flex align-items-center">
-							<button type="submit" class="btn btn-primary">Login</button>
-							<a href="{% url 'forgot-password' %}" class="text-decoration-none">Forgot Password?</a>
+						<div class="mb-3">
+							<label for="otp" class="form-label">Enter your email OTP</label>
+							<input type="text" class="form-control" id="otp" name="otp" required>
 						</div>
+						<button type="submit" class="btn btn-primary">Check OTP</button>
+						<p class="mt-3">
+							<a href="{% url 'user-login' %}" class="text-decoration-none">Back to Login</a>
+						</p>
 					</form>
-					
-				
 				</div>
 			</div>
+		</div>
 
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 	</body>
