--- a/project/templates/expenses/forgot_password.html
+++ b/project/templates/expenses/forgot_password.html
@@ -1,15 +1,11 @@
+{% extends 'base.html' %}
 {% load static %}
-<!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Forgot Password</title>
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-		<link rel="stylesheet" href="{% static 'css/login.css' %}">
-	</head>
-	<body>
-		<div class="container-fluid min-vh-100 d-flex align-items-center">
+{% block title %}Forgot Password{% endblock %}
+{% block extra_css %}
+<link rel="stylesheet" href="{% static 'css/login.css' %}">		
+{% endblock %}
+{% block content %}
+<div class="container-fluid d-flex align-items-center justify-content-center h-100">
 			
 			<!-- Display Messages -->
 			{% if messages %}
@@ -54,6 +50,7 @@
 			</div>
 		</div>
 
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-	</body>
-</html>
+{% endblock %}
+	
+
+		
