--- a/project/templates/expenses/user_signup.html
+++ b/project/templates/expenses/user_signup.html
@@ -1,15 +1,12 @@
+{% extends 'base.html' %}
 {% load static %}
-<!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>User Signup Page</title>
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-		<link rel="stylesheet" href="{% static 'css/login.css' %}">
-	</head>
-	<body>
-		<div class="container-fluid min-vh-100 d-flex align-items-center">
+{% block title %}User Signup Page{% endblock %}
+{% block extra_css %}
+<link rel="stylesheet" href="{% static 'css/login.css' %}">		
+{% endblock %}
+
+{% block content %}
+		<div class="container-fluid d-flex align-items-center justify-content-center h-100">
 			<!-- Display Messages -->
 			{% if messages %}
 				{% for message in messages %}
@@ -19,6 +16,7 @@
 					</div>
 				{% endfor %}
 			{% endif %}
+
 
 			<div class="row w-100 g-0">
 				<!-- Left Side - Image -->
@@ -64,6 +62,6 @@
 				</div>
 			</div>
 
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-	</body>
-</html>
+			</div>
+
+{% endblock %}
