--- a/project/templates/user_profile/user_total_expenses.html
+++ b/project/templates/user_profile/user_total_expenses.html
@@ -4,13 +4,13 @@
 {% block title %}Total Expenses{% endblock %}
 
 {% block extra_css %}
-<link rel="stylesheet" href="{% static 'css/login.css' %}">
+<link rel="stylesheet" href="{% static 'css/total_expenses.css' %}"> 
 {% endblock %}
 
 {% block content %}
 <div class="container">
     <h4 class="text-center">Total Expenses</h4>
-    <table class="table table-bordered table-striped">
+    <table class="table table-bordered">
         <thead class="table-dark">
             <tr>
                 <th>#</th>
@@ -38,6 +38,14 @@
             </tr>
             {% endfor %}
         </tbody>
+
+        <tfoot>
+            <tr>
+                <th colspan="3" class="text-end">Total</th>
+                <th>{{ total_amount }}</th>
+                <th colspan="2"></th>
+            </tr>
+        </tfoot>
 
     </table>
 </div>
