--- a/project/templates/user_profile/add_user_expenses.html
+++ b/project/templates/user_profile/add_user_expenses.html
@@ -10,6 +10,18 @@
 {% block content %}
 <div class="container">
     <h4 class="text-center">Add Expenses</h4>
+    {% if messages %}
+    <div class="mt-3">
+        {% for message in messages %}
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+        {% endfor %}
+    </div>
+    {% endif %}
+
+
 
     <form method="POST" action="">
         {% csrf_token %}
