--- a/project/templates/user_profile/user_total_expenses.html
+++ b/project/templates/user_profile/user_total_expenses.html
@@ -1,52 +1,93 @@
-{% extends 'base.html' %}
-{% load static %}
+    {% extends 'base.html' %}
+    {% load static %}
 
-{% block title %}Total Expenses{% endblock %}
+    {% block title %}Total Expenses{% endblock %}
 
-{% block extra_css %}
-<link rel="stylesheet" href="{% static 'css/total_expenses.css' %}"> 
-{% endblock %}
+    {% block extra_css %}
+    <link rel="stylesheet" href="{% static 'css/total_expenses.css' %}">
+    {% endblock %}
 
-{% block content %}
-<div class="container">
-    <h4 class="text-center">Total Expenses</h4>
-    <table class="table table-bordered">
-        <thead class="table-dark">
-            <tr>
-                <th>#</th>
-                <th>Title</th>
-                <th>Category</th>
-                <th>Amount</th>
-                <th>Date</th>
-                <th>Description</th>
-            </tr>
-        </thead>
+    {% block content %}
+    <div class="container">
+        <div class="row">
+            <!-- LEFT SIDE: Months -->
+            <div class="col-md-4">
+                <h5 class="text-center">Filter by Month & Year</h5>
 
-        <tbody>
-            {% for expense in expenses %}
-            <tr>
-                <td>{{ forloop.counter }}</td>
-                <td>{{ expense.title }}</td>
-                <td>{{ expense.category.name }}</td>
-                <td>{{ expense.amount }}</td>
-                <td>{{ expense.date }}</td>
-                <td>{{ expense.description }}</td>
-            </tr>
-            {% empty %}
-            <tr>
-                <td colspan="6" class="text-center">No expenses found.</td>
-            </tr>
-            {% endfor %}
-        </tbody>
+                <table class="table table-bordered month-year-table">
+                    <thead class="table-dark">
+                        <tr>
+                            <th>Months</th>
+                            <th>Year</th>
+                            <th>Year</th>
+                        </tr>
+                    </thead>
 
-        <tfoot>
-            <tr>
-                <th colspan="3" class="text-end">Total</th>
-                <th>{{ total_amount }}</th>
-                <th colspan="2"></th>
-            </tr>
-        </tfoot>
+                    <tbody>
+                        {% for month in months %}
+                        <tr>
+                            <td>{{ month.name }}</td>
+                            <td>
+                                <a href="?month={{ month.name }}&year={{ first_year.year }}" class="filter-item">
+                                    {{ first_year.year }}
+                                </a>
+                            </td>
+                            <td>
+                                <a href="?month={{ month.name }}&year={{ last_year.year }}" class="filter-item">
+                                    {{ last_year.year }}
+                                </a>
+                            </td>
+                        </tr>
+                            {% endfor %}
+                    </tbody>
 
-    </table>
-</div>
-{% endblock %}
+
+                </table>
+            </div>
+
+            <!-- RIGHT SIDE: Expenses Table -->
+            <div class="col-md-8">
+                <h4 class="text-center">Total Expenses</h4>
+                <table class="table table-bordered">
+                    <thead class="table-dark">
+                        <tr>
+                            <th>#</th>
+                            <th>Title</th>
+                            <th>Category</th>
+                            <th>Amount</th>
+                            <th>Date</th>
+                            <th>Description</th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        {% for expense in expenses %}
+                        <tr>
+                            <td>{{ forloop.counter }}</td>
+                            <td>{{ expense.title }}</td>
+                            <td>{{ expense.category.name }}</td>
+                            <td>{{ expense.amount }}</td>
+                            <td>{{ expense.date }}</td>
+                            <td>{{ expense.description }}</td>
+                        </tr>
+                        {% empty %}
+                        <tr>
+                            <td colspan="6" class="text-center">No expenses found.</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+
+                    <tfoot>
+                        <tr>
+                            <th colspan="3" class="text-end">Total</th>
+                            <th>{{ total_amount }}</th>
+                            <th colspan="2"></th>
+                        </tr>
+                    </tfoot>
+
+                </table>
+            </div>
+        </div>
+
+    </div>
+    {% endblock %}
